feat: get community detection usage & add surfaceUnit
* doc: usage docs

* feat: get usage for community

* test(fix): fix communityZoneSurfaceTest

* refactor: make default surface value static
